# cc-metrics

./: .gitignore  CMakeLists.txt  README.md  compare.h  config.h  parse.cpp  parse.h  snapshot.cpp  snapshot.h
scripts/analyze/: compare-all.sh  compare.sh  extract-all.sh  extract.sh  summarize.sh
scripts/compile/: cc-build.sh  cc-clone.sh  cc-test.sh  setup-gtest.sh  setup-nodejs.sh
scripts/parse/: parse-postgre.sh  parse-sqlite.sh  parse.sh  run-postgre.sh  run-sqlite.sh  webserver.sh
source/: acc_main.cpp  accumulate.cpp  accumulate.h  cmp_main.cpp  codecache.cpp  codecache.h  compare.cpp  main.cpp  metrics.cpp  metrics.h  parse.cpp  parse.h  snapshot.cpp  snapshot.h  sum_main.cpp  summarize.cpp  summarize.h
